@@ -1,3 +1,7 @@
+Thu Jun 27 00:07:09 BST 2013  Peter Schiffer <pschiffe@redhat.com>
+
+	* src/check_mandirs.c (testmandirs): Check return value of chdir.
+
 Wed Jun 26 22:41:22 BST 2013  Peter Schiffer <pschiffe@redhat.com>
 
 	* lib/encodings.c (find_charset_locale): Fall back to C.UTF-8 then
